--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>The Scots College, 19th November, 2015</h2>
-								<p>At Scots, The Scotsfest event has become a highly anticipated evening that provides a showcase of young filmmaking talent. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the 14th of November for cinema spectacular event.</p>
+								<h2>The Scots College, Thursday, 19th November, 2015</h2>
+								<p>ScotsFest is a showcase of young filmmaking talent. 
+								Now in its eighth year, ScotsFest is open to all school age filmmakers. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the <i>13th of November</i> for cinema spectacular event.</p>
 							</header>
 						</div>
 					</section>
