--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header" class="wrapper style1">
-						<h1><a href="index.html">Scotsfest 2015</a></h1>
-					</header>
-
+				
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<img src="images/ltl2.png" alt="ScotsFest Logo"</img>
+							<img src="images/ltl2.png" alt="ScotsFest Logo" width="50%"></img>
 							<p>Scotsfest 2015<br />
 							Annual Student Film Festival<br />
 							Presented by <a href="http://tsc.nsw.edu.au">The Scots College</a>.</p>
