--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 								<h2>The Scots College, Thursday, 19th November, 2015</h2>
 								<p>ScotsFest is a showcase of young filmmaking talent. 
 								Now in its eighth year, ScotsFest is open to all school age filmmakers. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the <i>13th of November</i> for cinema spectacular event.</p>
+								<p>ScotsFest will be held on Thursday the 19th of November 2015, in the Auditorium of The Scots College, Bellevue Hill. Enter from Victoria Road.  Guests are asked to arrive from 5:30pm with program commencing at 6:30pm.</p>
+								<p>Movie snacks and BBQ food is available.<br>
+								Entry is free. <br>
+								For more information, please contact The Scots College (02) 9391 7672.</p>
 							</header>
 						</div>
 					</section>
@@ -103,6 +107,15 @@
 								<li class="icon">
 									<p>Films must be submitted in Quicktime 16:9</p>
 								</li>
+								<li class="icon">
+									<p>Submissions must have been produced in the last 18 months.</p>
+								</li>
+								<li class="icon">
+									<p>On occasion, film entries may be additionally distributed or screened at the discretion of ScotsFest committee.</p>
+								</li>
+								<li class="icon">
+									<p>HD films preferred on USB or DVD. Submissions in 4:3 may be cropped.</p>
+								</li> 
 							</ul>
 						</div>
 					</section>
