--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<header class="major">
 								<h2>The Scots College, Thursday, 19th November, 2015</h2>
 								<p>ScotsFest is a showcase of young filmmaking talent. 
-								Now in its eighth year, ScotsFest is open to all school age filmmakers. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the <i>13th of November</i> for cinema spectacular event.</p>
+								Now in its eigth year, ScotsFest is open to all school age filmmakers. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the <i>13th of November</i> for cinema spectacular event.</p>
 								<p>ScotsFest will be held on Thursday the 19th of November 2015, in the Auditorium of The Scots College, Bellevue Hill. Enter from Victoria Road.  Guests are asked to arrive from 5:30pm with program commencing at 6:30pm.</p>
 								<p>Movie snacks and BBQ food is available.<br>
 								Entry is free. <br>
@@ -58,13 +58,13 @@
 						<section class="spotlight">
 							<div class="image"><iframe src="https://player.vimeo.com/video/79256538?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><div class="content">
 								<h2>Flying in Circles</h2>
-								<p>International Grammar School's <i>Ziyad Norhisham</i> and <i> Rex Wood</i> create a world which harkens back to simpler times, to when everything was alright. And how to get back.</p>
+								<p>International Grammar School's <i>Ziyad Norhisham</i> and <i>Rex Woods</i> create a world which harkens back to simpler times, to when everything was alright. And how to get back.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><iframe src="https://player.vimeo.com/video/118669501?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><div class="content">
 								<h2>Anti Citizen</h2>
-								<p>The Scots College's <i>Mitchel Leslie</i> presents a dystopic future with mind control, oppressive masked police and deserted apartment buildings.</p>
+								<p>The Scots College's <i>Mitchell Leslie</i> presents a dystopic future with mind control, oppressive masked police and deserted apartment buildings.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -73,6 +73,7 @@
 								<p>The Scots College's <i>Angus Chrichton</i> tells a heartfelt tale of his families heritage and his future.</p>
 							</div>
 						</section>
+						<section class="wrapper style2 special"><p>To see more entries, please see our <a href="https://vimeo.com/channels/872264">Vimeo page here</a></p></section>
 						
 					</section>
 
