Made small gramatical changes

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 							<header class="major">
 								<h2>The Scots College, Thursday, 19th November, 2015</h2>
 								<p>ScotsFest is a showcase of young filmmaking talent. 
-								Now in its eigth year, ScotsFest is open to all school age filmmakers. <br>Now in its eigth year, Scotsfest is gaining more momentum as each year passes. The 2015 competition is expected to produce an even higher standard of student film. This year we hope to widen the competition even more by inviting our neighbouring schools once again and celebrate talented filmmakers. Entries close on the <i>13th of November</i> for cinema spectacular event.</p>
-								<p>ScotsFest will be held on Thursday the 19th of November 2015, in the Auditorium of The Scots College, Bellevue Hill. Enter from Victoria Road.  Guests are asked to arrive from 5:30pm with program commencing at 6:30pm.</p>
+								Now in its eigth year, ScotsFest is open to all school age filmmakers.<br>Entries close on the <i>13th of November</i>.</p>
+								<p>ScotsFest will be held on Thursday the 19th of November 2015, in the Auditorium of The Scots College, Bellevue Hill.<br>Enter from Victoria Road.  Guests are asked to arrive from 5:30pm with program commencing at 6:30pm.</p>
 								<p>Movie snacks and BBQ food is available.<br>
 								Entry is free. <br>
 								For more information, please contact The Scots College (02) 9391 7672.</p>
@@ -52,13 +52,13 @@
 						<section class="spotlight">
 							<div class="image"><iframe src="https://player.vimeo.com/video/118669496?color=ffffff&title=0&portrait=0&byline=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><div class="content">
 								<h2>Le Garcon</h2>
-								<p>The Scots College's <i>Nick Ward</i> and <i>Bailey Thomas</i> contemplate a misfit boy's place in the world, and confronting the things we don't want to confront. In French/Black & White</p>
+								<p>The Scots College's <i>Nick Ward</i> and <i>Bailey Thomas</i> contemplate a misfit boy's place in the world, and confronting the things we don't want to confront. In French/Black & White.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><iframe src="https://player.vimeo.com/video/79256538?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><div class="content">
 								<h2>Flying in Circles</h2>
-								<p>International Grammar School's <i>Ziyad Norhisham</i> and <i>Rex Woods</i> create a world which harkens back to simpler times, to when everything was alright. And how to get back.</p>
+								<p>International Grammar School's <i>Rex Woods</i> creates a world of simpler times, when everything was alright.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -70,10 +70,10 @@
 						<section class="spotlight">
 							<iframe src="https://player.vimeo.com/video/131624541?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><div class="content">
 								<h2>For You</h2>
-								<p>The Scots College's <i>Angus Chrichton</i> tells a heartfelt tale of his families heritage and his future.</p>
+								<p>The Scots College's <i>Angus Crichton</i> tells a heartfelt tale of his families heritage and his future.</p>
 							</div>
 						</section>
-						<section class="wrapper style2 special"><p>To see more entries, please see our <a href="https://vimeo.com/channels/872264">Vimeo page here</a></p></section>
+						<section class="wrapper style2 special"><p>See more entries <a href="https://vimeo.com/channels/872264">here</a></p></section>
 						
 					</section>
 
@@ -82,37 +82,25 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Entry Rules/Terms and Conditions</h2>
-								<p>The Scotsfest Short Film Festival will be held on Thursday the 19th November 2015, in the Scots College Main Audiotium, Victoira Road, Bellevue Hill. Guests are asked to arrive from 5:40pm with program commencing at 6:30pm.<br>
-								Food and drinks will be sold on the evening. <br>
-								Entry is free. For more information, please contact The Scots College (02) 9391 7672.</p>
+								<p>The Scotsfest Short Film Festival will be held on Thursday the 19th November 2015,<br> in the Scots College Main Auditorium, Victoria Road, Bellevue Hill.<br> Guests are invited to arrive from 5:30pm.<b>Program commences at 6:30pm.<br>
+								Movie Snacks and BBQ food is avaliable. <br>
+								Entry is free.<br> For more information, please contact The Scots College (02) 9391 7672.</p>
 							</header>
 							<ul class="features">
 								<li class="icon">
 									<p>Entries are limited to school students.</p>
 								</li>
 								<li class="icon">
-									<p>Submissions must be work that has been produced 2015.</p>
+									<p>The use of any copyright music, graphics and video must be acknowledged in credits.</p>
 								</li>
 								<li class="icon">
-									<p>The use of any copyright music, graphics and video must be achnowledged in credits.</p>
-								</li>
-								<li class="icon">
-									<p>Copyright for the submitted films remains the property of the student, however,</p>
+									<p>Copyright for the submitted films remains the property of the student.</p>
 								</li>
 								<li class="icon">
 									<p>Copies of films will be uploaded to the tscdigitalmedia Vimeo page and a link provided to entrants.</p>
 								</li>
 								<li class="icon">
-									<p>Film entries may be additionally distributed or screend at the discretion of Scotsfest committee.</p>
-								</li>
-								<li class="icon">
-									<p>Films must be submitted in Quicktime 16:9</p>
-								</li>
-								<li class="icon">
-									<p>Submissions must have been produced in the last 18 months.</p>
-								</li>
-								<li class="icon">
-									<p>On occasion, film entries may be additionally distributed or screened at the discretion of ScotsFest committee.</p>
+									<p>Film entries may be occasionally used at the discretion of the ScotsFest committee.</p>
 								</li>
 								<li class="icon">
 									<p>HD films preferred on USB or DVD. Submissions in 4:3 may be cropped.</p>
@@ -129,7 +117,7 @@
 								<p>Please fill out the below online form. Entered films must be sent to:
 								</p>
 								<p><i>Scotsfest, C/O The Stevenson Library, The Scots College, Victoria Rd, Bellevue Hill, NSW 2023</i></p>
-								<p>Please ring (02) 9391 7672 if you need any assistance entering the competition.</p>
+								<p>Please call (02) 9391 7672 if you need any assistance entering the competition.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://goo.gl/forms/dMTQjwexRF" class="button fit special">Enter Now</a></li>
